<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ScheduleView">


    <ImageView
        android:id="@+id/exportButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_download_24" />

    <View
        android:id="@+id/divider11"
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <View
        android:id="@+id/divider10"
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <View
        android:id="@+id/divider9"
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <View
        android:id="@+id/divider8"
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <View
        android:id="@+id/divider7"
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <View
        android:id="@+id/divider6"
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:background="@color/dark_blue"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <View
        android:id="@+id/divider5"
        android:layout_width="384dp"
        android:layout_height="1dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:onClick="previousMonthAction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_round_arrow_circle_left_24" />

    <TextView
        android:id="@+id/monthYearTV"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/feb_2021"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:fontFamily="serif"
        android:text="@string/sun"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:fontFamily="serif"
        android:text="@string/mon"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/divider6"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="53.5dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:fontFamily="serif"
        android:text="@string/tue"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/divider7"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:fontFamily="serif"
        android:text="@string/wed"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/divider8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:fontFamily="serif"
        android:text="@string/thur"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/divider10"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />


    <TextView
        android:id="@+id/textView18"
        android:layout_width="53.5dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:fontFamily="serif"
        android:text="@string/fri"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/divider9"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:fontFamily="serif"
        android:text="@string/sat"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/divider11"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="0dp"
        android:layout_height="385dp"
        app:layout_constraintBottom_toTopOf="@+id/schedBackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/schedBackBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_round_arrow_circle_left_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="60dp"
        android:onClick="nextMonthAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nextarrow" />

</androidx.constraintlayout.widget.ConstraintLayout>