<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddEmployee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="312dp"
        android:layout_height="463dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_square_24" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        android:textColor="#F44336"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/employeePhoneField"
        app:layout_constraintTop_toBottomOf="@+id/employeeEmailField" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        android:textColor="#F44336"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/employeeEmailField"
        app:layout_constraintTop_toTopOf="@+id/employeeEmailField" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*"
        android:textColor="#F44336"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/employeeLNameField"
        app:layout_constraintTop_toBottomOf="@+id/employeeFNameField" />

    <EditText
        android:id="@+id/employeeEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/EmployeeEmail"
        android:inputType="textWebEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.491" />

    <EditText
        android:id="@+id/employeePhoneField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/EmployeePhone"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.607" />

    <EditText
        android:id="@+id/employeeFNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/EmployeeFName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.26" />

    <EditText
        android:id="@+id/employeeLNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/EmployeeLName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.375" />

    <ImageButton
        android:id="@+id/addEmployeeBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_baseline_check_circle_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/backBtn2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_round_arrow_circle_left_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/add_employee_title"
        android:layout_width="296dp"
        android:layout_height="49dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/AddScreenTitle"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.038" />

    <Switch
        android:id="@+id/employeeStatusSwitch"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:fontFamily="serif"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.722" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="7dp"
        android:layout_height="21dp"
        android:text="*"
        android:textColor="#F44336"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/employeeFNameField"
        app:layout_constraintTop_toTopOf="@+id/employeeFNameField" />

</androidx.constraintlayout.widget.ConstraintLayout>